website/app/style-3.css
body {
    padding-top: 0px;
    font-size: 13px;
    overflow-y: scroll;
    overflow-x: hidden;
    /*background-color: #f3f3f3;*/
    /*line-height: 20px;*/
}

.validation-invalid {
    color: #FF4136;
}

/*************************************************All about table th, td, hover *************************/

/*.mc-table {*/
/*color: black;*/
/*}*/

/*.mc-table-hover tbody tr:hover td,*/
/*.mc-table-hover tbody tr:hover th {*/
/*background-color: #CCCCCC;*/
/*}*/
.pagination {
    text-align: center;
    cursor: pointer;
}

/*******************************************************************************************************/

/*************************************************All about top navigation bar *************************/
.navbar-custom {
    background-color: #0C5C86;
    color:#ffffff;
    border-radius: 0;
}

.navbar-custom .navbar-nav > li > a {
    padding-left: 20px;
    padding-right: 20px;
    line-height: 40px;
    height: 40px;
    padding-top: 0;
    color: #f5f5f5 ;
}

.navbar-custom .navbar-nav > li > a:hover, .nav > li > a:focus {
    text-decoration: none;
    background-color: cornflowerblue;
}

.navbar-custom .navbar-brand {
    color: #eeeeee;
    line-height: 40px;
    height: 40px;
    padding-top: 0;
}

.navbar-custom .navbar-toggle {
    background-color: #eeeeee;
}

.navbar-custom .icon-bar {
    background-color: #0C5C86;
}

.navbar {
    margin-bottom: 2px;
    min-height: 15px !important;
}

/*************************************This controls the height,  padding, and border radius and space between(margin bottom) of all input elements******/
.form-horizontal
.control-label {
    padding-top: 5px;
}

.form-control {
    height: 30px;
    line-height: 20px;
    padding: 3px;
    font-size: 13px;
}

.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
    background-color: #ECF0F1;
    cursor: not-allowed;
    opacity: 1;
}

.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
    padding-left: 0;
    padding-right: 6px;
}

.form-horizontal .form-group {
    margin-bottom: 2px;
    margin-left:10px;
}

.input-group .form-control:first-child, .input-group-addon:first-child, .input-group-btn:first-child > .btn, .input-group-btn:first-child > .btn-group > .btn, .input-group-btn:first-child > .dropdown-toggle, .input-group-btn:last-child > .btn:not(:last-child):not(.dropdown-toggle), .input-group-btn:last-child > .btn-group:not(:last-child) > .btn {
    border-radius: 6px;
}

.input-group .form-control:last-child, .input-group-addon:last-child, .input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group > .btn, .input-group-btn:last-child > .dropdown-toggle, .input-group-btn:first-child > .btn:not(:first-child), .input-group-btn:first-child > .btn-group:not(:first-child) > .btn {
    border-radius: 6px;

}

textarea.form-control {
    height: 80px;
    width: 400px;
}

/************************************Other*************************************/

.row {
    margin-left: 5px;
}

.btn, btn-default {
    padding: 4px 15px;
    font-size: 13px;
}

.fa-asterisk {
    color: red;
}

.form-control:focus {
    border-color: #1ABC9C;
}

.form-control:focus:invalid:focus {
    border-color: #E9322D;
}

.label-primary {
    margin-right: 5px;
    background-color: steelblue;
}

p {
    margin: 0px;
}

/*.col-sm-2 {*/
    /*width: 12%;*/
/*}*/

.individual-items.nav-tabs > li > a,
.individual-items.nav-tabs > li.active > a,
.individual-items.nav-tabs > li.active > a:hover,
.individual-items.nav-tabs > li.active > a:focus {
    border: 1px solid #ecf0f1;
    border-right: solid red;
    cursor: default;
    outline: none;
}

footer {
    position: fixed;
    bottom: 0px;
    width: 100%;
    height: 25px;
    background-color: lightgrey;
}

h4, .h4, h5, .h5, h6, .h6 {
    margin-bottom: 10.5px;
    margin-top: 3px;
}

.dropdown-submenu {
    position: relative;
}

.dropdown-submenu>.dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px 6px;
    border-radius: 0 6px 6px 6px;
}

.dropdown-submenu:hover>.dropdown-menu {
    display: block;
}

.dropdown-submenu>a:after {
    display: block;
    content: " ";
    float: right;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    border-left-color: #cccccc;
    margin-top: 5px;
    margin-right: -10px;
}

.dropdown-submenu:hover>a:after {
    border-left-color: #ffffff;
}

.dropdown-submenu.pull-left {
    float: none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
    left: -100%;
    margin-left: 10px;
    -webkit-border-radius: 6px 0 6px 6px;
    -moz-border-radius: 6px 0 6px 6px;
    border-radius: 6px 0 6px 6px;
}

.fa-check,
.available {
    color: limegreen;
}

.fa-times,
.notavailable {
    color: red;
}

/*.modal-backdrop {*/
    /*background-color: none;*/
/*}*/

.btn-circle {
    width: 30px;
    height: 30px;
    text-align: center;
    padding: 6px 0;
    font-size: 12px;
    line-height: 1.428571429;
    border-radius: 15px;
}

.btn-circle.btn-lg {
    width: 50px;
    height: 50px;
    padding: 10px 16px;
    font-size: 18px;
    line-height: 1.33;
    border-radius: 25px;
}

.btn-circle.btn-xl {
    width: 70px;
    height: 70px;
    padding: 10px 16px;
    font-size: 24px;
    line-height: 1.33;
    border-radius: 35px;
}

.panel-body.mypanel:hover {
    opacity: 0.05;
    filter: alpha(opacity=5);
}

.panel-body.custom-background {
    background-color: papayawhip;
    color: white;
}

.doit {
    opacity: 0.5;
}

.doit2 {
    opacity: 1;
}

/*
** Remove outline on selected items (eg in a tab pill)
*/
.btn:focus {
    outline: none;
}

.project-tabs {
    margin-bottom: 10px !important;
}

.marginLeft {
    margin-left: 10px !important;
}

/********* Custom table *********/
.table-file-directory {
    margin-top: -22px;
    border-collapse: separate;
    border: 1px solid lightgrey;
    /*border-spacing: 0 1px;*/
}

.table-file-directory  > thead > th {
    background-color: lightgrey;
    color: black;
}

table-file-directory > tbody >td {
    background-color: white;
}

.table-file-directory > thead > tr > th,
.table-file-directory > thead > tr > th,
.table-file-directory > tbody > tr > th,
.table-file-directory > tbody > tr > th,
.table-file-directory > tfoot > tr > th,
table-file-directory > thead > tr > td,
.table-file-directory > thead > tr > td,
.table-file-directory > tbody > tr > td,
.table-file-directory > tbody > tr > td, table-file-directory  > tfoot > tr > td,
.table-file-directory > tfoot > tr > td {
    border-bottom: 1px solid lightgrey;
}

.panel-default {
    border-color: lightgrey;
    color: grey;
}


.file-heading {
    padding: 22px 15px;

}

.oval {
    width: 100px;
    height: 50px;
    background: #eecfbf;
    -moz-border-radius: 50px / 25px;
    -webkit-border-radius: 50px / 25px;
    border-radius: 50px / 25px;
}

.row.project-tags {
    padding-bottom: 10px;
}

.tag-info {
    width: 80px;
    height: 30px;
    border-radius: 10px;
}

.command-btn {
    margin: 10px;
}

.command-symbol {
    width: 50px;
    height: 50px;
    border-radius: 50%;
}

.command-name {
    font-size: 25px;
    color: #ffffff;
    text-align: center
}

.command-symbol > i {
    color: white;
    margin: 13px 3px;
}

.tag-circle {
    width: 15px;
    height: 15px;
    border-radius: 10px;
}

.side-bar {
    width: 200px;
    position: fixed;
    height: 100%;
    /*background-color: #222222;*/
    background-color: #2c2c2c;
    margin-left: -12px;
    margin-top: -4px;
    box-shadow: 20px 0 5px -2px #f3f3f3;
    border-right: 2px solid #dddddd;
}

.main-content {
    margin-left: 200px;
    position: relative;
}

.nav-stacked > li > a,
.nav-stacked > li.active > a:hover,
.nav-stacked > li.active > a:focus {
    border-right: 2px solid yellow;

}

.limit-text{
    width: 100px;
    height: 10px;
}

.container-fixed {
    margin: 0 auto;
    width: 1200px;
    /*min-width: 1000px;*/
}
.nav-tabs {
    border-bottom: 1px solid #d6d6d6;
}
.nav-tabs > li > a {
    margin-right: 2px;
    line-height: 1.42857143;
    border: 1px solid #e7e7e7;
    border-radius: 4px 4px 0 0;
    border-bottom-color: transparent;
    border-left-color: transparent;
}
.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
    color: #2c3e50;
    background-color: #e4e4e4;
    border: 1px solid #ecf0f1;
    border-bottom-color: transparent;
    cursor: default;
}
#machines{
    display: none;
}

.ta-scroll-window .ta-bind {
    padding: 6px 30px;
}
.ta-scroll-window.form-control {
    height: 200px;
    overflow: auto;
    padding: 0;
    position: relative;
}

